# TamaLyon

./: .gitignore  Aliment.cpp  AlimentManager.cpp  AlimentManager.h  AlimentsConcrets.h  Animal.cpp  AnimatedLion.qml  CMakeLists.txt  DraggableAliment.qml  DraggableIcon.qml  EffectHandler.cpp  Lion.cpp  Lion.h  LionManager.cpp  LionManager.h  LyonFAce.qml  Main.qml  MainOOP.qml  MainSimple.qml  Makefile  Makefile.test_unit_aliment  MoodBar.qml  REFACTORING_COMPLETE.md  TEST_SYNCHRONISATION.md  TamaLyon.pro  WebSocketServer.h  basic_test.cpp  basic_test.moc  basic_test.pro  main.cpp  moc_Aliment.cpp  moc_AlimentManager.cpp  moc_AlimentsConcrets.cpp  moc_Animal.cpp  moc_EffectHandler.cpp  moc_Lion.cpp  moc_LionManager.cpp  moc_WebSocketClient.cpp  moc_WebSocketServer.cpp  qml.qrc  (+10 more)
TamaLyon.app/Contents/: Info.plist
docs/: GUIDE_IMAGES_LION.md  ORGANISATION_FICHIERS.md  PLANTUML_Classes.puml  RAPPORT_DEBUG_ALIMENT.md  STRUCTURE_PROJET.md
qml/components/: AnimatedLion.qml  DraggableAliment.qml  LyonFace.qml  MoodBar.qml
qml/pages/: Main.qml  MainOOP.qml
scripts/: clean_project.sh  diagnostic_manual.sh  diagnostic_network.sh  launch_demo.sh  monitor_logs.sh  organize_project.sh  project_status.sh
src/core/: Aliment.h  AlimentsConcrets.cpp  Animal.h  EffectHandler.h  Lion.cpp  Lion.h
src/managers/: LionManager.cpp  LionManager.h
src/network/: WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp
test_unit_aliment.app/Contents/: Info.plist
test_unit_aliment.app/Contents/MacOS/: test_unit_aliment
tests/: Makefile  TestTamaLyon.cpp  TestTamaLyon.h  target_wrapper.sh  tests.pro
